# oc_py_wrapper

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
benchmark/: README.md  __init__.py  __main__.py  aggregator.py  analyzer.py  grader.py  models.py  reviewer.py  runner.py  viewer.html
benchmark/agents/: analyzer.md  grader.md
benchmark/examples/: config_a.json  config_b.json  evals.json
examples/: __init__.py  multi_agent_weather.py  multi_agent_weather_output.txt
opencode_wrapper/: __init__.py  client.py  config.py  errors.py  events.py
tests/: conftest.py  test_client_async.py  test_config_instructions.py  test_config_permission.py  test_event_parser.py  test_integration_external_directory.py  test_integration_instructions.py  test_integration_multi_agent_weather.py  test_integration_opencode.py  test_integration_parallel.py  test_run_result_fuzzy_text.py
